Try and fix table wrap

--- a/css/main.scss
+++ b/css/main.scss
@@ -45,3 +45,7 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+.overflow-table {
+    overflow-x: scroll;
+}
